# home_insurance_lapsing

./: .gitignore  pyproject.toml  readme.md  run_training_experiments.sh
src/: __init__.py  benchmark.py  pre_process.py  train.py
tests/: test_benchmark.py  test_pre_process.py  test_train.py
