[tool.poetry]
name = "esure_task"
version = "0.1.0"
description = "Lapsed home insurance task"
authors = ["Alex Georgiou"]

[tool.poetry.dependencies]
python = "3.9"
pandas = "^1.5.1"
matplotlib = "^3.6.2"
seaborn = "^0.12.1"
ipykernel = "^6.17.0"
scikit-learn = "^1.1.3"
xgboost = "^1.7.1"
shap = "^0.41.0"
mlflow = "^1.30.0"
graphviz = "^0.20.1"
pytest = "^7.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
